# go-binary-tutorial

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go  main_test.go
.github/workflows/: tests.yml
testdata/: test.json  test.yaml
