load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

gazelle(name = "gazelle")

# gazelle:prefix github.com/career-coder/go-binary-tutorial

go_library(
    name = "go-binary-tutorial_lib",
    srcs = ["main.go"],
    importpath = "github.com/career-coder/go-binary-tutorial",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_yaml_v3//:go_default_library"],
)

go_binary(
    name = "go-binary-tutorial",
    embed = [":go-binary-tutorial_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go-binary-tutorial_test",
    srcs = ["main_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go-binary-tutorial_lib"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

native_binary(
    name = "prebuilt",
    src = "go-binary-tutorial_x86_darwin",
)
